[package]
name = "mookaite"
version = "0.1.0"
authors = ["buddja <buddjad@gmail.com>"]

[dependencies]
libc = "0.2.18"
x11-dl = "2.6.1"
rand = "0.3.15"
walkdir = "1.0.3"
clap = "2.19.2"
slog-term = "1.3.3"
slog-stream = "1.2.0"

[dependencies.slog]
version = "1.3.2"
default-features = false
features = ["release_max_level_trace", "max_level_trace"]
